# rkj-ai

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DEVS.md  GETTING_STARTED.md  LICENSE  README.md  deploy.sh  pyproject.toml  run_bot_tests.sh
apps/api/: Dockerfile  requirements.txt
apps/api/src/: config.py  dependencies.py  main.py
apps/web/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  proxy.ts
apps/web/.interface-design/: system.md
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: theme-toggle.tsx
docs/: aws-ec2-autoscaling.md  production-deployment.md  testing-meet-bot.md
infrastructure/docker/: docker-compose.prod.yml  docker-compose.yml
scripts/: dev.sh
scripts/benchmark/: README.md  benchmark.py  config.py  requirements.txt
scripts/benchmark/audio_samples/: .gitkeep
scripts/benchmark/collectors/: __init__.py  docker_stats.py  timing_collector.py
scripts/benchmark/generators/: __init__.py  html_report.py
scripts/benchmark/results/: .gitkeep
scripts/benchmark/scenarios/: __init__.py  api_security.py  base.py  bot_stress.py  transcription_load.py
services/bot-orchestrator/: Dockerfile  requirements.txt
services/bot-orchestrator/src/: __init__.py  config.py  container_manager.py  main.py
services/meet-bot/: Dockerfile  entrypoint.sh  requirements.txt
services/meet-bot/src/: __init__.py  bot.py  caption_scraper.py  config.py  main.py  recorder.py  speaker_tracker.py  transcriber.py  upload.py
services/scheduler/: Dockerfile  requirements.txt
services/transcription-worker/: Dockerfile  requirements.txt
supabase/: config.toml
supabase/migrations/: 00001_initial_schema.sql  00002_timezone_and_sync.sql  00006_fix_auto_sync_default.sql  20260125193415_remote_schema.sql
(+67 files in other folders)
