[project]
name = "meeting-assistant"
version = "0.1.0"
description = "Automated meeting recording and transcription assistant"
authors = [
    {name = "Alan", email = "alanfrigo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["meeting", "transcription", "recording", "ai", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/alanfrigo/rkj-ai"
Documentation = "https://github.com/alanfrigo/rkj-ai#readme"
Repository = "https://github.com/alanfrigo/rkj-ai.git"
Issues = "https://github.com/alanfrigo/rkj-ai/issues"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B006",  # mutable default argument
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
